# carla-data-serde

./: Cargo.toml
src/: serde.rs
src/serde/: actor.rs  collision.rs  image.rs  imu_measurement.rs  lane_invasion.rs  lidar_measurement.rs  nalgebra.rs  obstacle_detection.rs  radar_measurement.rs
